# outbid-dirigent

./: .gitignore  ARCHITECTURE.html  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  OUTBID_CONTEXT.md  README.md  SPEC.md  a.py  analyzer.py  dirigent.py  example-SPEC.md  executor.py  hatch_build.py  install.sh  logger.py  oracle.py  pr-review-complete.md  pr-review.md  pr-summary.md  proteus_integration.py  pyproject.toml  release-please-config.json  router.py  scaffolding-improvements.txt  spec.compact.xml  test-compaction.py
.brv/: config.json
.brv/context-tree/: .snapshot.json
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agents/: compliance-checker.md  standards-reviewer.md
.devcontainer/: devcontainer.json
.dirigent/logs/: run-20260407-172859.jsonl  run-20260407-173050.jsonl  run-20260407-173151.jsonl
.dirigent/reviews/: quick-feature.json
.firecrawl/: claude-hooks-docs.md  entire-checkpoints.md  entire-config.md  entire-core-concepts.md  entire-docs.md  entire-github.md  entire-io.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  commitlint.yml  integration-tests.yml  release-please.yml  release.yml  tests.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
00/674c31d48f/: metadata.json
01/c2141ade80/: metadata.json
02/3d2efbfdf9/: metadata.json
04/784e37f83f/: metadata.json
05/25bf3d42c7/: metadata.json
06/19f3a212d6/: metadata.json
06/4e3b7b6371/: metadata.json
09/59e09d068c/: metadata.json
13/8d6244d635/: metadata.json
14/6531a6abaf/: metadata.json
19/4afae10ad7/: metadata.json
1a/4a903eee8d/: metadata.json
1a/79bb14f65c/: metadata.json
1a/b5fa9b2169/: metadata.json
1e/b3f8ff9aae/: metadata.json
1f/6274b5596f/: metadata.json
1f/cb5650c0ed/: metadata.json
1f/e7812f3871/: metadata.json
20/d51e503135/: metadata.json
21/d574a05d15/: metadata.json
25/417d7f8357/: metadata.json
25/6abd779638/: metadata.json
25/7ae830d10b/: metadata.json
25/7bc1eaa267/: metadata.json
25/963174d18c/: metadata.json
26/942e760535/: metadata.json
29/2424de5ab3/: metadata.json
29/662c468cf0/: metadata.json
2d/0b36dc2aaf/: metadata.json
2e/caa55a1970/: metadata.json
30/9e7dc2c60f/: metadata.json
31/0509be8cff/: metadata.json
31/34745afebb/: metadata.json
32/4aa5159a58/: metadata.json
34/5d48551eef/: metadata.json
35/445fae8f13/: metadata.json
36/26f4d90c2f/: metadata.json
38/e5dde1b21b/: metadata.json
39/76e69dea19/: metadata.json
39/df5f4ae784/: metadata.json
3a/7a8467fbfe/: metadata.json
3c/d5c3d92787/: metadata.json
3f/71f6e87f14/: metadata.json
41/58c3ddb8c0/: metadata.json
42/3c29ee674a/: metadata.json
43/49daf887c3/: metadata.json
46/858cc9506b/: metadata.json
47/11cea42c48/: metadata.json
4a/643f7aa603/: metadata.json
4e/5ecc90bd3d/: metadata.json
50/9f588a57b6/: metadata.json
51/b73ae9782a/: metadata.json
52/a743840d40/: metadata.json
53/3dcba3de9a/: metadata.json
54/e0e62a74c3/: metadata.json
57/9993c7cc4a/: metadata.json
59/c15a01c7df/: metadata.json
59/e09177e6be/: metadata.json
5a/0d4494e3e2/: metadata.json
5b/7feaa79e49/: metadata.json
5b/eb91c8c318/: metadata.json
5c/3b3c389945/: metadata.json
5c/c834cd4942/: metadata.json
5f/023b3f4974/: metadata.json
60/cdc1362e0d/: metadata.json
62/f96069cde5/: metadata.json
63/4d19545325/: metadata.json
63/5459d9cf85/: metadata.json
64/26e385a120/: metadata.json
6a/b8a4945feb/: metadata.json
6b/006d39273d/: metadata.json
6b/4e43c1214d/: metadata.json
6c/e561aadd76/: metadata.json
6e/eec4b886cd/: metadata.json
70/6065388d1a/: metadata.json
74/e637f55abc/: metadata.json
76/b55a0c077b/: metadata.json
77/649245c9c3/: metadata.json
77/9b5d7188b8/: metadata.json
79/c13e169030/: metadata.json
7d/5496121475/: metadata.json
7d/77c7d21583/: metadata.json
7f/37e9dbedb0/: metadata.json
7f/62dd290256/: metadata.json
81/2265749b00/: metadata.json
81/28662448c6/: metadata.json
83/bd25ae9eaa/: metadata.json
84/134ab43773/: metadata.json
84/188cb71a7a/: metadata.json
84/1ac176cdbd/: metadata.json
86/192d0a1534/: metadata.json
88/34937661ff/: metadata.json
89/19bd01947f/: metadata.json
91/885e3bbd55/: metadata.json
91/9e4a859beb/: metadata.json
92/3724e8ba69/: metadata.json
94/cd0b7b6d22/: metadata.json
96/d50a6eb410/: metadata.json
97/1f48cf087f/: metadata.json
97/c12f9ec804/: metadata.json
9c/20fd9e145e/: metadata.json
9f/26da7acc92/: metadata.json
9f/934cadf064/: metadata.json
a0/c9355c5d40/: metadata.json
a0/e70db109e8/: metadata.json
a2/5fc437b71e/: metadata.json
a5/8ab6f14d2a/: metadata.json
a6/2f1f66c236/: metadata.json
a7/4605e901b2/: metadata.json
a9/4ac515200a/: metadata.json
a9/5e38ff8bf8/: metadata.json
a9/7a42093dd8/: metadata.json
ae/5ce03deb0d/: metadata.json
ae/eddedb82e9/: metadata.json
af/d551b78ac0/: metadata.json
b0/5305286ef6/: metadata.json
b0/53d8ce49ac/: metadata.json
b1/4fb9b69219/: metadata.json
b5/b6b30cf38e/: metadata.json
b5/eb0c96245c/: metadata.json
b6/3f87230cf4/: metadata.json
b6/3fd8cc1b2b/: metadata.json
b8/f3dd3af20f/: metadata.json
ba/60d7159fc6/: metadata.json
bc/3a7cb0ab3f/: metadata.json
coder/: dirigent-module.tf  standalone-install.sh
example/: setup-greenfield-smoke.sh  setup-smoke-test.sh
harness-docs/: design-system.md  engineering-standards.md  remediation-plan.md  standards-status.md  working-agreement.md
tests/: __init__.py  conftest.py  fake_claude.py  test_agent_frontmatter.py  test_analyzer.py  test_contract_schema.py  test_e2e.py  test_executor_integration.py  test_final_review.py  test_greenfield_smoke.py  test_harness_install.py  test_llm_router.py  test_logger_fields.py  test_oracle.py  test_phase_id_handling.py  test_plan_schema.py  test_router.py  test_shipper_idempotent.py  test_shipper_pr_base.py  test_smoke.py  test_spec_compactor.py  test_spec_validator.py  test_task_runner.py  test_toolbox_snapshot.py  test_validate_schema.py
(+960 files in other folders)
