[project]
name = "outbid-dirigent"
version = "1.3.0"
description = "Headless autonomous coding agent controller"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.20.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0",
]

[project.scripts]
dirigent = "outbid_dirigent.dirigent:main"

[project.optional-dependencies]
dev = [
    "bump-my-version>=0.28.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",  # Für Test-Coverage Reports
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/outbid_dirigent"]

[tool.hatch.build.targets.wheel.force-include]
"src/outbid_dirigent/plugin" = "outbid_dirigent/plugin"

[tool.bumpversion]
current_version = "1.3.0"
commit = true
tag = true
tag_name = "v{new_version}"
commit_message = "bump: version {current_version} -> {new_version}"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

# ══════════════════════════════════════════
# PYTEST CONFIGURATION
# ══════════════════════════════════════════
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
# -v = verbose output (zeigt jeden Test einzeln)
# --tb=short = kurze Tracebacks bei Fehlern
