[project]
name = "outbid-dirigent"
version = "1.8.0"
description = "Headless autonomous coding agent controller"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.20.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0",
    "claude-agent-sdk>=0.1.58",
]

[project.scripts]
dirigent = "outbid_dirigent.dirigent:main"

[project.optional-dependencies]
dev = [
    "bump-my-version>=0.28.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/outbid_dirigent"]

[tool.hatch.build.targets.wheel.force-include]
"src/outbid_dirigent/plugin" = "outbid_dirigent/plugin"

[tool.bumpversion]
current_version = "1.8.0"
commit = true
tag = true
tag_name = "v{new_version}"
commit_message = "bump: version {current_version} -> {new_version}"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/outbid_dirigent/plugin/.claude-plugin/plugin.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

# ══════════════════════════════════════════
# TY (type checker) — exclude self-contained
# uv-script files that declare their own deps
# inline and are not part of the main package.
# ══════════════════════════════════════════
[tool.ty.src]
exclude = [
    "src/outbid_dirigent/plugin/mcp/",
]

# ══════════════════════════════════════════
# PYTEST CONFIGURATION
# ══════════════════════════════════════════
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
# -v = verbose output (zeigt jeden Test einzeln)
# --tb=short = kurze Tracebacks bei Fehlern
